--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^16.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
